--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(pr
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        parkinglotnotfounderror.h parkinglotnotfounderror.cpp
     )
 else()
     if(ANDROID)
